--- a/deploy.yml
+++ b/deploy.yml
@@ -2,13 +2,7 @@
 ---
 - hosts: dev
   tasks:
-  - name: Run apt upgrade
-    apt:
-     upgrade: "yes"
-     update_cache: yes
-     cache_valid_time: 432000
-
-   - name: Install add-apt-repostory
+   - name: Install add-apt-repository
      become: yes
      apt: name=software-properties-common state=latest
 
